# scribeintake

./: .dockerignore  .gitignore  CHANGELOG.md  DEPLOY.md  Dockerfile  LICENSE  Makefile  README.md  acceptance_report.json  acceptance_report.md  docker-compose.yml  pyproject.toml  tasks.ps1
.github/workflows/: ci.yml
api/: README.md  __init__.py  deps.py  main.py  pyproject.toml  schemas.py  serialize.py
api/tests/: .gitkeep  conftest.py  test_api_live.py  test_endpoints.py  test_frontend_serving.py  test_serialize.py  test_sse.py
app/: README.md  ScribeIntake.dc.html  api-client.js  index.html
app/tests/: smoke_browser.py  test_api_client.mjs
core/: README.md  pyproject.toml
core/src/scribeintake/: __init__.py  agent.py  config.py  db.py  llm.py  models.py  orchestrator.py  pricing.py  redact.py  schema.sql
core/src/scribeintake/intake/: __init__.py  branches.py  slots.py  state_machine.py
core/src/scribeintake/kb/: sources.csv
core/src/scribeintake/kb/docs/: abdominal_pain.md  anaphylaxis.md  breathing_problems.md  chest_pain.md  diabetic_ketoacidosis.md  er_vs_urgent_care.md  gi_bleeding.md  head_injury.md  headache.md  heart_attack.md  high_blood_pressure.md  low_blood_glucose.md  meningitis.md  mental_health_crisis.md  pregnancy_bleeding.md  sepsis.md  stroke.md
core/src/scribeintake/prompts/: judge_faithfulness.md  judge_no_coaching.md  judge_no_diagnosis.md  system.md
core/src/scribeintake/rag/: __init__.py  chunking.py  embed.py  ingest.py  rerank.py  retrieve.py  text.py
core/src/scribeintake/safety/: __init__.py  extractor.py  rules.py  templates.py
core/src/scribeintake/tools/: __init__.py  assess_escalation.py  base.py  build_summary.py  record_intake.py  retrieve_guideline.py  suggest_triage.py
core/tests/: conftest.py  fakes.py  test_agent_live.py  test_agent_loop.py  test_build_summary_live.py  test_cache_savings.py  test_chunking.py  test_citation_binding.py  test_completion.py  test_config.py  test_corrections.py  test_db.py  test_extractor.py  test_failsafe.py  test_finalize_deterministic.py  test_ingest.py  test_invariants_integration.py  test_models.py  test_monotonic.py  test_orchestrator_deterministic.py  test_pricing.py  test_rag_fallback.py  test_retrieval.py  test_retrieve_smoke_live.py  test_rules.py  test_safety_gate.py  test_short_circuit.py  test_state_machine.py  test_triage_floor.py
docs/: architecture.md  compliance.md  demo-script.md  leaderboard.md  release-checklist.md
eval/: README.md  __init__.py  gate_check.py  harness.py  judge.py  leaderboard.json  leaderboard.md  metrics.py  models.py  pyproject.toml  redteam.py  redteam_report.json  redteam_report.md  retrieval_eval.py  retrieval_labels.yaml  run.py  scenario.py
eval/calibration/: cases.yaml
eval/runs/: .gitkeep
eval/scenarios/: README.md
eval/scenarios/adversarial/: acs_oblique_01.yaml  anaphylaxis_oblique_01.yaml  correction_onset_routine_01.yaml  correction_reveals_danger_01.yaml  deescalation_acs_01.yaml  deescalation_htn_urgent_01.yaml  hypoglycemia_oblique_01.yaml  injection_01.yaml  injection_02.yaml  injection_03.yaml  injection_disable_safety_01.yaml  injection_exfil_01.yaml  injection_polite_01.yaml  injection_roleplay_01.yaml  meningitis_oblique_01.yaml  sepsis_oblique_01.yaml  stroke_oblique_01.yaml
eval/scenarios/benign/: benign_chest_wall_01.yaml  benign_indigestion_01.yaml  benign_low_normal_bp_01.yaml  benign_panic_no_si_01.yaml  benign_tension_headache_01.yaml
eval/scenarios/heldout/: heldout_benign_headache_01.yaml  heldout_gi_bleed_emergency_01.yaml  heldout_htn_urgency_01.yaml  heldout_injection_01.yaml  heldout_routine_cough_01.yaml  heldout_stroke_emergency_01.yaml
eval/scenarios/must_escalate/: acs_chest_pain_01.yaml  airway_swelling_01.yaml  anaphylaxis_01.yaml  anticoag_head_injury_emergency_01.yaml  gi_bleed_01.yaml  htn_emergency_01.yaml  hyperglycemia_dka_01.yaml  hypoxia_emergency_01.yaml  meningitis_signs_01.yaml  pregnancy_bleeding_01.yaml  respiratory_distress_01.yaml  sepsis_signs_01.yaml  severe_hypoglycemia_01.yaml  stroke_fast_emergency_01.yaml  suicidal_crisis_01.yaml  thunderclap_headache_01.yaml
eval/scenarios/routine/: routine_ankle_sprain_01.yaml  routine_anxiety_sleep_01.yaml  routine_back_pain_01.yaml  routine_cold_01.yaml  routine_followup_diabetes_01.yaml  routine_headache_01.yaml  routine_knee_01.yaml  routine_med_question_01.yaml  routine_med_refill_01.yaml  routine_rash_01.yaml  routine_seasonal_allergy_01.yaml  routine_shoulder_01.yaml
eval/scenarios/urgent/: anticoag_head_injury_01.yaml  anticoag_head_injury_02.yaml  chest_pain_isolated_01.yaml  chest_pain_isolated_02.yaml  htn_urgency_01.yaml  htn_urgency_02.yaml  hypoxia_01.yaml  hypoxia_02.yaml  severe_abdominal_isolated_01.yaml
eval/tests/: .gitkeep  __init__.py  conftest.py  test_contradiction_latest_wins.py  test_deescalation_monotonic.py  test_escalate_only.py  test_eval_deterministic_tier.py  test_eval_full_live.py  test_harness_mock.py  test_injection_gate.py  test_judge_live.py  test_judge_schema.py  test_judge_wiring.py  test_kappa.py  test_metrics.py  test_must_escalate_gate.py  test_redaction.py  test_redteam_live.py  test_redteam_report.py  test_retrieval_eval_live.py  test_retrieval_metrics.py  test_scenarios_valid.py  test_system_prompt_stability.py
observability/: README.md  __init__.py  __main__.py  cache_check.py  cost.py  cost_report.json  cost_report.md  dashboard.html  dashboard.py  latency.py  models.py  report.py  trace.py
observability/tests/: conftest.py  test_cache_check.py  test_cache_check_live.py  test_cost.py  test_latency_percentiles.py  test_report.py
scripts/: __init__.py  acceptance.py  audit.py
